--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,14 +7,14 @@
   <form class="col-lg-4">
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" id="email" class="form-control" />
+      <input #email type="email" id="email" class="form-control" />
     </div>
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" class="form-control" />
+      <input #password type="password" id="password" class="form-control" />
     </div>
 
-    <button (click)="login()" type="button" class="btn btn-primary">Login</button>
+    <button (click)="login(email.value, password.value)" type="button" class="btn btn-primary">Login</button>
   </form>
 </div>
