--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,27 +5,28 @@
 </div>
 
 <div class="row justify-content-md-center">
-  <form class="col-lg-4">
+  <form (ngSubmit)="register()" #heroForm="ngForm" class="col-lg-4">
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" name="email" id="email" class="form-control" />
+      <input [(ngModel)]="user.email" type="email" name="email" id="email" class="form-control" />
     </div>
 
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" name="password" id="password" class="form-control" />
+      <input [(ngModel)]="user.password" type="password" name="password" id="password" class="form-control" />
     </div>
 
     <div class="form-group">
       <label for="password_confirmation">Confirm password</label>
-      <input type="password" name="password_confirmation" id="password_cinfirmation" class="form-control" />
+      <input [(ngModel)]="user.password_confirmation" type="password" name="password_confirmation" id="password_cinfirmation" class="form-control"
+      />
     </div>
 
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" name="name" id="name" class="form-control" />
+      <input [(ngModel)]="user.name" type="text" name="name" id="name" class="form-control" />
     </div>
 
-    <button type="button" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-primary">Register</button>
   </form>
 </div>
