--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <h5 class="my-0 mr-md-auto font-weight-normal">{{ title }}</h5>
   <nav class="my-2 my-md-0 mr-md-3">
     <a routerLink="/" routerLinkActive="active" class="p-2 text-dark">Home</a>
-    <a *ngIf="!isLogged" routerLink="/login" routerLinkActive="active" class="btn btn-outline-primary">Login</a>
-    <a *ngIf="!isLogged" routerLink="/register" routerLinkActive="active" class="btn btn-outline-primary">Register</a>
-    <a (click)="logout()" *ngIf="isLogged" href="#/logout" class="btn btn-outline-danger">Logout</a>
+    <a *ngIf="!login.isAuthenticated()" routerLink="/login" routerLinkActive="active" class="btn btn-outline-primary">Login</a>
+    <a *ngIf="!login.isAuthenticated()" routerLink="/register" routerLinkActive="active" class="btn btn-outline-primary">Register</a>
+    <a (click)="logout()" routerLink="/logout" *ngIf="login.isAuthenticated()" class="btn btn-outline-danger">Logout</a>
   </nav>
 </div>
 
